Initial Push from master

--- a/profiles/development.properties
+++ b/profiles/development.properties
@@ -12,7 +12,7 @@ app.web.compression.minsize=65536
 build.ui.mode=wm
 build.ui.ng.args=--prod=true --source-map=false
 build.ui.node.args=--max-old-space-size=512
-security.enabled=false
+security.enabled=true
 security.general.cors.allowCredentials=false
 security.general.cors.enabled=false
 security.general.cors.maxAge=1600
@@ -20,7 +20,22 @@ security.general.cors.root.allowedOrigins=*
 security.general.frameOptions.allowFromUrl=
 security.general.frameOptions.enabled=true
 security.general.frameOptions.mode=SAMEORIGIN
+security.general.rememberMe.enabled=false
+security.general.rememberMe.timeOut=1296000
+security.general.session.timeout=30
 security.general.ssl.enabled=false
 security.general.ssl.port=443
+security.general.tokenService.enabled=true
+security.general.tokenService.parameter=WM_AUTH_TOKEN
+security.general.tokenService.tokenValiditySeconds=1800
+security.general.xsrf.enabled=true
 security.general.xss.enabled=true
-security.providers=
+security.providers=OPENID
+security.providers.openId.google.authorizationUrl=https://accounts.google.com/o/oauth2/v2/auth
+security.providers.openId.google.clientId=907865987932-hfv4n5fccgooisccjg40b8vefrc8tfou.apps.googleusercontent.com
+security.providers.openId.google.clientSecret=_kP4R5dXV7uCoD5aAAO2Cddr
+security.providers.openId.google.jwkSetUrl=https://www.googleapis.com/oauth2/v3/certs
+security.providers.openId.google.scopes=email
+security.providers.openId.google.tokenUrl=https://www.googleapis.com/oauth2/v4/token
+security.providers.openId.google.userInfoUrl=https://www.googleapis.com/oauth2/v3/userinfo
+security.providers.openId.google.userNameAttributeName=email
