--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/MyJavaService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/securityService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -145,6 +152,7 @@
                         </goals>
                         <configuration>
                             <sources>
+                                <source>services/MyJavaService/src</source>
                                 <source>services/securityService/src</source>
                             </sources>
                         </configuration>
@@ -368,6 +376,15 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-jose</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <dependencyManagement>
