--- a/services/securityService/src/securityService.properties
+++ b/services/securityService/src/securityService.properties
@@ -6,7 +6,22 @@ general.cors.root.allowedOrigins=${security.general.cors.root.allowedOrigins}
 general.frameOptions.allowFromUrl=${security.general.frameOptions.allowFromUrl}
 general.frameOptions.enabled=${security.general.frameOptions.enabled}
 general.frameOptions.mode=${security.general.frameOptions.mode}
+general.rememberMe.enabled=${security.general.rememberMe.enabled}
+general.rememberMe.timeOut=${security.general.rememberMe.timeOut}
+general.session.timeout=${security.general.session.timeout}
 general.ssl.enabled=${security.general.ssl.enabled}
 general.ssl.port=${security.general.ssl.port}
+general.tokenService.enabled=${security.general.tokenService.enabled}
+general.tokenService.parameter=${security.general.tokenService.parameter}
+general.tokenService.tokenValiditySeconds=${security.general.tokenService.tokenValiditySeconds}
+general.xsrf.enabled=${security.general.xsrf.enabled}
 general.xss.enabled=${security.general.xss.enabled}
 providers=${security.providers}
+providers.openId.google.authorizationUrl=${security.providers.openId.google.authorizationUrl}
+providers.openId.google.clientId=${security.providers.openId.google.clientId}
+providers.openId.google.clientSecret=${security.providers.openId.google.clientSecret}
+providers.openId.google.jwkSetUrl=${security.providers.openId.google.jwkSetUrl}
+providers.openId.google.scopes=${security.providers.openId.google.scopes}
+providers.openId.google.tokenUrl=${security.providers.openId.google.tokenUrl}
+providers.openId.google.userInfoUrl=${security.providers.openId.google.userInfoUrl}
+providers.openId.google.userNameAttributeName=${security.providers.openId.google.userNameAttributeName}
